--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tinymce/tinymce-react": "^6.0.0",
     "@types/glidejs__glide": "^3.6.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
