--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "sass": "^1.85.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
